[package]
name = "kekecri"
version = "0.1.0"
authors = ["Hugo Delahousse <hugo.delahousse@epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
dotenv = "0.15.0"
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"
clap = "2.33.0"
maplit = "1.0.2"
